--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="bg-slate-950 text-slate-50">
+  <body style="background-color: #fdfaf5; color: #2c2c2c;">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
